Clean up vulnerability notebook codebase for production
- Remove unused functions (skeletons, templates, formatters, error states)
- Remove unused variables (mutable state, config, color scales)
- Remove unused imports and debug console.log statements
- Consolidate duplicate admin selection getter functions
- Add comprehensive JSDoc documentation to utility functions
- Improve code organization and add inline comments
- Add .gitignore entries for local analysis reports

Removed ~400 lines of unused code while maintaining all functionality.
No breaking changes introduced.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ _site
 */libs/
 /.luarc.json
 .DS_Store
+
+# Local analysis reports (not for version control)
+**/PHASE*_ANALYSIS_REPORT.md
+**/PHASE*_CLEANUP_SUMMARY.md
